--- a/config.json
+++ b/config.json
@@ -116,8 +116,7 @@
           "decryption":"none",		
            "clients": [
               {
-                 "password": "
-4b4175c7-031f-4fd9-b1bf-932d1e4aaabd"
+                 "password": "4b4175c7-031f-4fd9-b1bf-932d1e4aaabd"
 #trojanws
               }
           ],
